--- a/adocs/09_design_decisions.adoc
+++ b/adocs/09_design_decisions.adoc
@@ -1,10 +1,14 @@
 [[section-design-decisions]]
 == Design Decisions
 
+=== Language
 ****
-We have decided to do the whole application using JavaScript and npm because our references are made with JS and, npm because it is the most used package manager related to JavaScript applications.
-
-We may use Angular in the near future to improve app style, however, in the demo version, this is not contemplated.
+We have decided to do the whole application using JavaScript and npm because our references are made with JS and npm because it is the most used package manager related to JavaScript applications.
 
 See our main reference https://github.com/pheyvaer/solid-chess[here]
+****
+
+=== Architecture
+****
+The architecture used in all the applications that you want to do with SOLID should be peer-to-peer (p2p) because it connects two nodes directly without having any centralized information.
 ****
