--- a/adocs/11_technical_risks.adoc
+++ b/adocs/11_technical_risks.adoc
@@ -6,7 +6,7 @@ In this document we will be talking about risks and technical debts, ordered by 
 
 * SOLID Documentation: There are very few resources, so our information source is limited.
 * Amount of libs: As its said before, there are few resources concerning SOLID itself, so the amount of libs compatible with SOLID technology are scarce. We will be searching conscientiously, hoping to find something.  
-* Language : We are not used to JavaScript, and the information found refers to it, so we will have to check it out. We could also look for frameworks like Angular or Node.js that makes js development more comfortable.
+* Language : We are not used to JavaScript, and the information found refers to it, so we will have to check it out. We could also look for frameworks like Node.js that makes js development more comfortable.
 * RDF : We know the basic concepts of RDF, but we need to learn SPARQL to understand how SOLID base works.
 * Docker: We had a demonstration about Docker and how a POD could be created, so we talked once about using it. However, we haven't enough knowledge about it, so, if we are finally using it, we will have to spend time learning how it works.
 * Webpack: We use webpack in order to use the newest functions javascript provides, along with babel to transform them to old javascript code, that is understood by many web browsers.
